# plugin-cosmos

./: Cargo.toml  README.md  build.rs  build_helpers.rs
assets/: idlescreen-cosmos.desktop  idlescreen-cosmos.xml  trance-cosmos.desktop
src/: lib.rs  tests_perf.rs
src/cosmos/: cosmos_tests.rs  mod.rs  physics.rs  types.rs
src/cosmos/physics/: accretion.rs  accretion_helpers.rs  bounds.rs  collapse.rs  drift.rs  expansion.rs  gravity.rs  history.rs  ignition.rs  merges.rs  particle_cap.rs  singularity.rs  update.rs
src/cosmos/physics/logo/: build.rs
src/cosmos/physics/states/: accretion.rs  big_bang.rs  darkness.rs  mod.rs  singularity.rs
src/cosmos/render/: big_bang_shell.rs  black_hole_disk.rs  grav_wave.rs  life.rs  mod.rs  particles.rs  seeds.rs  star_corona.rs
